<resources>
    <string name="app_name">LCalculator</string>
    <string name="key_1">1</string>
    <string name="key_2">2</string>
    <string name="key_3">3</string>
    <string name="key_4">4</string>
    <string name="key_5">5</string>
    <string name="key_6">6</string>
    <string name="key_7">7</string>
    <string name="key_8">8</string>
    <string name="key_9">9</string>
    <string name="key_0">0</string>
    <string name="key_dot">.</string>
    <string name="key_cancel">C</string>
    <string name="key_multiple">×</string>
    <string name="key_minus">−</string>
    <string name="key_plus">+</string>
    <string name="key_equals">=</string>
    <string name="key_devide">÷</string>
    <string name="key_erase">⌫</string>
    <string name="key_plusminus">±</string>
    <string name="g">haha</string>
    <string name="precent">%</string>
    <string name="background_image">background image</string>
    <string name="main_theme">MAIN THEME</string>
    <string name="night_theme">NIGHT THEME</string>
    <string name="purple_theme">PURPLE THEME</string>
    <string name="blue_theme">BLUE THEME</string>
    <string name="orange_theme">ORANGE THEME</string>
    <string name="theme">choose your theme</string>
    <string name="how_to">HOW TO</string>
</resources>